mdt_cli/tests/snapshots/init__init_does_not_overwrite.snap
---
source: mdt_cli/tests/init.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpROCBZT
    - init
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Initializing [TEMP_DIR]
Using existing config mdt.toml
Template file already exists: template.t.md

----- stderr -----
